--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
 {
-    "name": "Image map feld",
+    "name": "quantum-dragons/image-map-feld",
     "extra": {
         "expose": [
             "client/dist"
         ]
+    },
+    "require": {
+        "php": ">=5.6.0",
+        "silverstripe/framework": "^4@dev",
+        "silverstripe/cms": "^4@dev",
+        "silverstripe/admin": "^1.1@dev"
     }
 }
