--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
             "client/dist"
         ]
     },
+    "license": "BSD-3-Clause",
     "require": {
         "php": ">=5.6.0",
         "silverstripe/framework": "^4@dev",
